WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138999
Transform StyleBuilderCustom into a class and mark it as a friend of RenderStyle
https://bugs.webkit.org/show_bug.cgi?id=138999
Summary
Transform StyleBuilderCustom into a class and mark it as a friend of RenderStyle
Chris Dumez
Reported
2014-11-21 21:28:39 PST
Transform StyleBuilderCustom into a class and mark it as a friend of RenderStyle. This is needed because some of the StyleBuilderCustom functions need to access RenderStyle's private API. DeprecatedStyleBuilder and StyleResolver (where the style builder code is coming from) are already marked as friend of RenderStyle.
Attachments
Patch
(21.17 KB, patch)
2014-11-21 21:53 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(23.42 KB, patch)
2014-12-01 09:45 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2014-11-21 21:53:27 PST
Created
attachment 242109
[details]
Patch
WebKit Commit Bot
Comment 2
2014-11-22 18:26:58 PST
Comment on
attachment 242109
[details]
Patch Rejecting
attachment 242109
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 242109, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: t.org/repository/webkit/trunk ... Authentication realm: <
http://svn.webkit.org:80
> Mac OS Forge Password for '
commit-queue@webkit.org
': Authentication realm: <
http://svn.webkit.org:80
> Mac OS Forge Username: Use of uninitialized value $username in chomp at /usr/share/git-core/perl/Git/SVN/Prompt.pm line 114. error: git-svn died of signal 11 Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 139 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output:
http://webkit-queues.appspot.com/results/6106075640102912
Chris Dumez
Comment 3
2014-12-01 09:45:28 PST
Created
attachment 242316
[details]
Patch
WebKit Commit Bot
Comment 4
2014-12-01 10:42:28 PST
Comment on
attachment 242316
[details]
Patch Clearing flags on attachment: 242316 Committed
r176593
: <
http://trac.webkit.org/changeset/176593
>
WebKit Commit Bot
Comment 5
2014-12-01 10:42:32 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug